# aws-assume-role-lib

./: CHANGELOG.md  README.md  aws_assume_role_lib.py  pyproject.toml  why-use-it.md
.github/workflows/: pypi.yaml
aws_assume_role_lib/: __init__.py  __main__.py  aws_assume_role_lib.py
lambda-demo/: README.md  deploy.py  template1.yaml  template2.yaml  test.py
lambda-demo/src/: handler1.py  handler2.py  handler3.py  handler4.py  requirements.txt
tests/: template.yaml  test.py
